Fixed checkout button overlapping add to cart when selected.

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -1570,7 +1570,9 @@ hr {
             }
             .ecom-product-go-to-checkout-btn {
                 padding: 12px 25px;
-                text-decoration: none;
+                &:hover {
+                    text-decoration: none;
+                }
             }
         }
 
